--- a/order.html
+++ b/order.html
@@ -27,6 +27,7 @@
     footer { text-align:center; color:#666; margin-top:30px; padding-top:18px; border-top:1px solid rgba(0,0,0,0.05); }
     .btn-tab { border-radius:8px; }
     .required { color: #c00; }
+    .disabled { opacity:0.6; pointer-events:none; }
   </style>
 </head>
 <body>
@@ -50,11 +51,8 @@
         </div>
 
         <!-- PRODUCTS GRID -->
-        <div id="products-grid" class="row g-3">
-          <!-- product cards inserted by JS -->
-        </div>
+        <div id="products-grid" class="row g-3"></div>
 
-        <!-- Gallery images (optional) -->
         <div class="mt-4">
           <h5 class="mb-2">Contoh Produk</h5>
           <div class="d-flex gap-2">
@@ -71,7 +69,6 @@
             <p class="small-muted">Sila scan QR DuitNow di bawah atau pindahkan ke akaun Maybank sebagaimana dinyatakan.</p>
             <div class="row">
               <div class="col-md-4 text-center">
-                <!-- QR image - ganti URL jika ada QR sebenar -->
                 <img id="qr-img" src="https://via.placeholder.com/260x260.png?text=QR+DuitNow" alt="QR DuitNow" style="max-width:220px; width:100%; border-radius:10px;">
                 <div class="small-muted mt-2">Maybank: 560072624185 (Koperasi Pembangunan Usahasama Masyarakat Maju Sabah Berhad)</div>
               </div>
@@ -87,23 +84,23 @@
                   <label class="form-label">No. Telefon <span class="required">*</span></label>
                   <input id="cust-phone" class="form-control" placeholder="Contoh: 6012xxxxxxx">
                 </div>
-
                 <div class="mb-2">
-                  <label class="form-label">Muat Naik Resit Bayaran (gambar)</label>
+                  <label class="form-label">Muat Naik Resit Bayaran (gambar sahaja)</label>
                   <input id="receipt-file" type="file" accept="image/*" class="form-control">
-                  <div class="small-muted mt-1">Max ukuran: 5MB. Gunakan gambar jelas resit.</div>
+                  <div class="small-muted mt-1">Max ukuran: 5MB. Hanya gambar dibenarkan.</div>
                 </div>
 
                 <div class="mt-3">
-                  <button id="proceed-pay" class="btn btn-primary">Proceed to Payment (lihat QR & muat naik)</button>
-                  <button id="submit-order" class="btn btn-success ms-2">Submit Order</button>
+                  <button id="submit-order" class="btn btn-success">Submit Order</button>
+                  <button id="whatsapp-order" class="btn btn-outline-success ms-2 disabled">
+                    <i class="bi bi-whatsapp me-1"></i> Hantar ke WhatsApp
+                  </button>
                   <span id="submit-status" class="ms-3 small-muted"></span>
                 </div>
               </div>
             </div>
           </div>
         </div>
-
       </div>
 
       <!-- Cart summary -->
@@ -112,17 +109,11 @@
           <h5>Troli Anda</h5>
           <div id="cart-items" class="mb-2 small-muted">Tiada item dipilih.</div>
           <div class="d-flex justify-content-between align-items-center mb-2">
-            <strong>Total:</strong>
-            <strong id="cart-total">RM0.00</strong>
+            <strong>Total:</strong><strong id="cart-total">RM0.00</strong>
           </div>
-
           <div class="d-grid gap-2">
-            <button id="whatsapp-order" class="btn btn-outline-success">
-              <i class="bi bi-whatsapp me-1"></i> Hantar ke WhatsApp
-            </button>
             <button id="clear-cart" class="btn btn-outline-secondary">Kosongkan</button>
           </div>
-
           <hr>
           <div>
             <strong>Maklumat Pembayaran</strong>
@@ -139,191 +130,119 @@
     <div>© <span id="year"></span> Kopusamaju Sabah Berhad.</div>
   </footer>
 
-  <!-- Config - Ganti nilai di sini selepas deploy Apps Script -->
+  <!-- Config -->
   <script>
-    const APPS_SCRIPT_WEBHOOK_URL = "https://script.google.com/macros/s/AKfycbyBI5xr4a88WJVY49fbzAmUFm7OD4nQLUDau5210zojf3VSssoW9J-D9VHWZ_kJ3T4cng/exec"; 
+    const APPS_SCRIPT_WEBHOOK_URL = "https://script.google.com/macros/s/AKfycbyBI5xr4a88WJVY49fbzAmUFm7OD4nQLUDau5210zojf3VSssoW9J-D9VHWZ_kJ3T4cng/exec";
     const SECRET_TOKEN = "PRAN-SECURE-9b8e47a2e37b4fd1b32b93dfc5eaa9b7";
-    const OWNER_WHATSAPP = "60128169367"; 
-    const QR_IMAGE_URL = "https://via.placeholder.com/260x260.png?text=QR+DuitNow"; 
+    const OWNER_WHATSAPP = "60128169367";
+    const QR_IMAGE_URL = "https://via.placeholder.com/260x260.png?text=QR+DuitNow";
   </script>
-
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
   <script>
-    // ---------- PRODUCTS ----------
     const PRODUCTS = [
       { id: "jus", name: "Jus Mangga", price: 5.00 },
       { id: "wafer", name: "Wafer Coklat", price: 3.00 },
       { id: "minuman", name: "Minuman Kotak", price: 4.00 },
     ];
-
-    // simple cart (in-memory)
-    const cart = {}; // id -> qty
+    const cart = {};
+    const whatsappBtn = document.getElementById("whatsapp-order");
+    const submitBtn = document.getElementById("submit-order");
 
     function formatRM(n){ return "RM" + n.toFixed(2); }
 
-    // render products grid
-    const grid = document.getElementById("products-grid");
     function renderProducts(){
+      const grid = document.getElementById("products-grid");
       grid.innerHTML = "";
       PRODUCTS.forEach(p=>{
-        const col = document.createElement("div");
-        col.className = "col-md-6 col-lg-6";
-        col.innerHTML = `
-          <div class="p-3 prod-card bg-white">
-            <div class="d-flex align-items-start gap-3">
-              <div style="width:88px;min-width:88px;">
-                <img src="/pran/${p.id === 'jus' ? 'jus.png' : p.id === 'wafer' ? 'wafer.png' : 'minumankotak.png'}" alt="${p.name}" style="width:88px;height:88px;object-fit:cover;border-radius:8px;">
-              </div>
-              <div class="flex-grow-1">
-                <h6 class="mb-1">${p.name}</h6>
-                <div class="small-muted mb-2">${formatRM(p.price)}</div>
-                <div class="d-flex align-items-center gap-2">
-                  <button class="btn btn-sm btn-outline-secondary btn-decrease" data-id="${p.id}">-</button>
-                  <div class="mx-2 qty-display" data-id="${p.id}">0</div>
-                  <button class="btn btn-sm btn-outline-secondary btn-increase" data-id="${p.id}">+</button>
-                  <button class="btn btn-sm btn-link text-danger ms-auto btn-add" data-id="${p.id}">Tambah</button>
+        const img = p.id==="jus" ? "jus.png" : p.id==="wafer" ? "wafer.png" : "minumankotak.png";
+        grid.innerHTML += `
+          <div class="col-md-6">
+            <div class="p-3 prod-card bg-white">
+              <div class="d-flex align-items-start gap-3">
+                <img src="/pran/${img}" alt="${p.name}" style="width:88px;height:88px;object-fit:cover;border-radius:8px;">
+                <div class="flex-grow-1">
+                  <h6>${p.name}</h6>
+                  <div class="small-muted mb-2">${formatRM(p.price)}</div>
+                  <div class="d-flex align-items-center gap-2">
+                    <button class="btn btn-sm btn-outline-secondary" onclick="changeQty('${p.id}',-1)">-</button>
+                    <div class="mx-2" id="qty-${p.id}">0</div>
+                    <button class="btn btn-sm btn-outline-secondary" onclick="changeQty('${p.id}',1)">+</button>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-        `;
-        grid.appendChild(col);
+          </div>`;
       });
     }
 
-    function updateCartUI(){
-      const itemsEl = document.getElementById("cart-items");
-      let lines = [];
-      let total = 0;
+    function changeQty(id,delta){ cart[id]=(cart[id]||0)+delta; if(cart[id]<0) cart[id]=0; updateCart(); }
+    function updateCart(){
+      const itemsEl=document.getElementById("cart-items");
+      let html="", total=0;
       PRODUCTS.forEach(p=>{
-        const q = cart[p.id] || 0;
-        if(q>0){
-          lines.push(`${p.name} x ${q} — ${formatRM(p.price * q)}`);
-          total += p.price * q;
-        }
-        // update qty displays
-        const el = document.querySelector(`.qty-display[data-id="${p.id}"]`);
-        if(el) el.textContent = q;
+        const q=cart[p.id]||0; document.getElementById("qty-"+p.id).textContent=q;
+        if(q>0){ html+=`<li>${p.name} x${q} — ${formatRM(p.price*q)}</li>`; total+=p.price*q; }
       });
-      itemsEl.innerHTML = lines.length ? ("<ul class='mb-2 ms-3'>" + lines.map(l=>`<li>${l}</li>`).join("") + "</ul>") : "Tiada item dipilih.";
-      document.getElementById("cart-total").textContent = formatRM(total);
-      document.getElementById("checkout-total").textContent = formatRM(total);
+      itemsEl.innerHTML=html?`<ul>${html}</ul>`:"Tiada item dipilih.";
+      document.getElementById("cart-total").textContent=formatRM(total);
+      document.getElementById("checkout-total").textContent=formatRM(total);
     }
 
-    // events: increase/decrease/add buttons
-    document.addEventListener("click", (e)=>{
-      const inc = e.target.closest(".btn-increase");
-      const dec = e.target.closest(".btn-decrease");
-      const add = e.target.closest(".btn-add");
-      if(inc){ const id=inc.dataset.id; cart[id]=(cart[id]||0)+1; updateCartUI(); }
-      if(dec){ const id=dec.dataset.id; cart[id]=Math.max(0,(cart[id]||0)-1); updateCartUI(); }
-      if(add){ const id=add.dataset.id; cart[id]=(cart[id]||0)+1; updateCartUI(); }
-    });
+    document.getElementById("clear-cart").onclick=()=>{ for(let p of PRODUCTS) cart[p.id]=0; updateCart(); };
 
-    // clear cart
-    document.getElementById("clear-cart").addEventListener("click", ()=>{ PRODUCTS.forEach(p=>cart[p.id]=0); updateCartUI(); });
+    submitBtn.onclick=async()=>{
+      const name=document.getElementById("cust-name").value.trim();
+      const phone=document.getElementById("cust-phone").value.trim();
+      const file=document.getElementById("receipt-file").files[0];
+      const status=document.getElementById("submit-status");
 
-    // WhatsApp order (format message & open wa.me)
-    document.getElementById("whatsapp-order").addEventListener("click", ()=>{
-      const name = document.getElementById("cust-name").value || "—";
-      const phone = document.getElementById("cust-phone").value || "—";
-      let total = 0;
-      let lines = PRODUCTS.map(p=>{
-        const q = cart[p.id] || 0;
-        if(q>0){ total += p.price * q; return `- ${p.name} x${q} = RM${(p.price*q).toFixed(2)}`; }
-        return null;
-      }).filter(Boolean);
-      if(lines.length===0){ alert("Sila pilih sekurang-kurangnya 1 item."); return; }
-      const msg = `Pesanan baru%0A${lines.join("%0A")}%0ATotal: RM${total.toFixed(2)}%0A%0APelanggan: ${encodeURIComponent(name)}%0APhone: ${encodeURIComponent(phone)}`;
-      const url = `https://wa.me/${OWNER_WHATSAPP}?text=${msg}`;
-      window.open(url, "_blank");
-    });
+      if(!name||!phone){ alert("Sila isi nama dan nombor telefon."); return; }
+      if(!file){ alert("Sila muat naik resit (gambar sahaja)."); return; }
+      if(!file.type.startsWith("image/")){ alert("Hanya fail gambar dibenarkan."); return; }
 
-    // Tabs (catalog / form) simple toggle - here we only keep catalog flow
-    document.getElementById("catalog-tab").addEventListener("click", ()=>{ document.getElementById("catalog-tab").classList.add("active"); document.getElementById("form-tab").classList.remove("active"); /* could toggle views */ });
-    document.getElementById("form-tab").addEventListener("click", ()=>{ document.getElementById("form-tab").classList.add("active"); document.getElementById("catalog-tab").classList.remove("active"); /* could toggle to PDF form panel */ });
+      let selected=PRODUCTS.filter(p=>cart[p.id]>0);
+      if(selected.length===0){ alert("Sila pilih sekurang-kurangnya satu item."); return; }
 
-    // proceed-pay just scrolls
-    document.getElementById("proceed-pay").addEventListener("click", ()=>{ document.getElementById("receipt-file").scrollIntoView({behavior:'smooth', block:'center'}); });
+      if(file.size>5*1024*1024){ alert("Saiz resit terlalu besar (max 5MB)."); return; }
 
-    // submit-order: validate, read file -> base64, then POST to apps script
-    document.getElementById("submit-order").addEventListener("click", async ()=>{
-      const name = (document.getElementById("cust-name").value||"").trim();
-      const phone = (document.getElementById("cust-phone").value||"").trim();
-      const fileInput = document.getElementById("receipt-file");
-      const file = fileInput.files[0] || null;
-      // validate
-      let lines = PRODUCTS.map(p=>({p, q: cart[p.id]||0})).filter(x=>x.q>0);
-      if(lines.length===0){ alert("Sila pilih item terlebih dahulu."); return; }
-      if(!name || !phone){ alert("Sila isi nama & nombor telefon."); return; }
-      if(!APPS_SCRIPT_WEBHOOK_URL || APPS_SCRIPT_WEBHOOK_URL.includes("PASTE_YOUR")){ alert("Apps Script URL belum diset. Sila deploy Code.gs & tampal URL."); return; }
-
-      document.getElementById("submit-status").textContent = "Menghantar...";
-      // prepare payload
-      const items = lines.map(l=>({ id: l.p.id, name: l.p.name, qty: l.q, price: l.p.price, subtotal: +(l.p.price*l.q).toFixed(2) }));
-      const total = items.reduce((s,i)=>s+i.subtotal,0);
-      // read file as base64 if exists
-      let receiptBase64 = "";
-      let receiptName = "";
-      if(file){
-        if(file.size > 5 * 1024 * 1024){ alert("Saiz resit terlalu besar (max 5MB)."); document.getElementById("submit-status").textContent = ""; return; }
-        receiptName = file.name;
-        receiptBase64 = await fileToBase64(file); // data:image/...;base64,AAA...
-      }
-
-      const payload = {
-        secret: SECRET_TOKEN,
-        timestamp: new Date().toISOString(),
-        customer: { name, phone },
-        items,
-        total,
-        receiptName,
-        receiptBase64
-      };
+      status.textContent="Menghantar...";
+      const items=selected.map(p=>({name:p.name,qty:cart[p.id],price:p.price,subtotal:p.price*cart[p.id]}));
+      const total=items.reduce((s,i)=>s+i.subtotal,0);
+      const base64=await toBase64(file);
+      const payload={secret:SECRET_TOKEN,customer:{name,phone},items,total,receiptName:file.name,receiptBase64:base64,timestamp:new Date().toISOString()};
 
       try{
-        const res = await fetch(APPS_SCRIPT_WEBHOOK_URL, {
-          method: "POST",
-          headers: { "Content-Type":"application/json" },
-          body: JSON.stringify(payload)
-        });
-        const data = await res.json();
-        if(data && data.status === "success"){
-          document.getElementById("submit-status").textContent = "Berjaya dihantar. Nombor rujukan: " + (data.ref || "—");
-          // send whatsapp notification automatically (also)
-          const waText = encodeURIComponent(`Pesanan baru:\n${items.map(i=>`${i.name} x${i.qty} = RM${i.subtotal.toFixed(2)}`).join("\n")}\nTotal: RM${total.toFixed(2)}\nPelanggan: ${name}\nPhone: ${phone}\nRef: ${data.ref || ''}`);
-          window.open(`https://wa.me/${OWNER_WHATSAPP}?text=${waText}`, "_blank");
-          // reset cart
-          PRODUCTS.forEach(p=>cart[p.id]=0);
-          updateCartUI();
-        }else{
-          throw new Error(data && data.message ? data.message : "Server error");
-        }
-      }catch(err){
-        console.error(err);
-        alert("Gagal menghantar pesanan: " + (err.message||err));
-        document.getElementById("submit-status").textContent = "";
+        const res=await fetch(APPS_SCRIPT_WEBHOOK_URL,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(payload)});
+        const data=await res.json();
+        if(data.status==="success"){
+          status.textContent="Berjaya dihantar.";
+          whatsappBtn.classList.remove("disabled");
+          alert("✅ Pesanan berjaya dihantar! Sila teruskan ke WhatsApp untuk pengesahan.");
+        }else throw new Error(data.message||"Server Error");
+      }catch(e){
+        status.textContent="Gagal menghantar.";
+        alert("❌ Ralat: "+e.message);
       }
-    });
+    };
 
-    function fileToBase64(file){
-      return new Promise((res,rej)=>{
-        const r = new FileReader();
-        r.onload = ()=> res(r.result);
-        r.onerror = ()=> rej("Fail read error");
-        r.readAsDataURL(file);
+    whatsappBtn.onclick=()=>{
+      if(whatsappBtn.classList.contains("disabled")) return alert("Sila isi borang & muat naik resit dahulu.");
+      const name=document.getElementById("cust-name").value.trim();
+      const phone=document.getElementById("cust-phone").value.trim();
+      let total=0;
+      const items=PRODUCTS.filter(p=>cart[p.id]>0).map(p=>{
+        total+=p.price*cart[p.id];
+        return `- ${p.name} x${cart[p.id]} = RM${(p.price*cart[p.id]).toFixed(2)}`;
       });
-    }
+      const msg=`Pesanan baru:\n${items.join("\n")}\nTotal: RM${total.toFixed(2)}\nNama: ${name}\nTelefon: ${phone}`;
+      window.open(`https://wa.me/${OWNER_WHATSAPP}?text=${encodeURIComponent(msg)}`,"_blank");
+    };
 
-    // init
-    renderProducts();
-    PRODUCTS.forEach(p=>cart[p.id]=0);
-    updateCartUI();
-    document.getElementById("year").textContent = new Date().getFullYear();
-    if(QR_IMAGE_URL) document.getElementById("qr-img").src = QR_IMAGE_URL;
+    function toBase64(f){ return new Promise((res,rej)=>{const r=new FileReader();r.onload=()=>res(r.result);r.onerror=rej;r.readAsDataURL(f);}); }
+
+    renderProducts(); updateCart(); document.getElementById("year").textContent=new Date().getFullYear(); document.getElementById("qr-img").src=QR_IMAGE_URL;
   </script>
 </body>
 </html>
