--- a/order.html
+++ b/order.html
@@ -132,7 +132,7 @@
 
   <!-- Config -->
   <script>
-    const APPS_SCRIPT_WEBHOOK_URL = "https://corsproxy.io/?" + encodeURIComponent("https://script.google.com/macros/s/AKfycbw0PldrQad37vGqpicexWgrOqCIKrvFr5zjsX6NFCjX3xpIyMaOLKjP6YGoApojVE7SCg/exec");
+    const APPS_SCRIPT_WEBHOOK_URL = "https://kienon-github-io.onrender.com");
     const SECRET_TOKEN = "PRAN-SECURE-9b8e47a2e37b4fd1b32b93dfc5eaa9b7";
     const OWNER_WHATSAPP = "60128169367";
     const QR_IMAGE_URL = "https://via.placeholder.com/260x260.png?text=QR+DuitNow";
