--- a/order.html
+++ b/order.html
@@ -132,7 +132,7 @@
 
   <!-- Config -->
   <script>
-    const APPS_SCRIPT_WEBHOOK_URL = "https://kienon-github-io.onrender.com");
+    const APPS_SCRIPT_WEBHOOK_URL = "https://pran-proxy.onrender.com");
     const SECRET_TOKEN = "PRAN-SECURE-9b8e47a2e37b4fd1b32b93dfc5eaa9b7";
     const OWNER_WHATSAPP = "60128169367";
     const QR_IMAGE_URL = "https://via.placeholder.com/260x260.png?text=QR+DuitNow";
