--- a/order.html
+++ b/order.html
@@ -11,19 +11,24 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
-    :root { --pran-red:#e41f26; --muted:#6b6b6b; }
-    body { font-family:Inter, sans-serif; background:#fff; color:#222; padding-bottom:60px; }
-    .hero{ text-align:center; padding:36px 0; border-bottom:1px solid rgba(0,0,0,0.05); }
-    .hero img{ max-height:90px; border-radius:10px; background:#fff; padding:6px; box-shadow:0 6px 18px rgba(0,0,0,0.06); }
-    .prod-card{ border-radius:12px; transition:transform .15s; }
-    .prod-card:hover{ transform:translateY(-4px); box-shadow:0 10px 30px rgba(0,0,0,0.06); }
-    .cart-summary{ position:sticky; top:16px; }
-    .pdf-box,.qr-box{ border-radius:12px; padding:16px; background:#fff; border:1px solid rgba(0,0,0,0.06); }
-    .small-muted{ color:var(--muted); font-size:0.9rem; }
-    footer{ text-align:center; color:#666; margin-top:30px; padding-top:18px; border-top:1px solid rgba(0,0,0,0.05); }
-    .btn-tab{ border-radius:8px; }
-    .required{ color:#c00; }
-    .disabled-link{ pointer-events:none; opacity:.6; }
+    :root {
+      --pran-red: #e41f26;
+      --pran-yellow: #f6c400;
+      --muted: #6b6b6b;
+    }
+
+    body { font-family: 'Inter', sans-serif; background:#fff; color:#222; padding-bottom:60px; }
+    .hero { text-align:center; padding:36px 0; border-bottom:1px solid rgba(0,0,0,0.05); }
+    .hero img { max-height:90px; border-radius:10px; background:#fff; padding:6px; box-shadow:0 6px 18px rgba(0,0,0,0.06); }
+    .prod-card { border-radius:12px; transition:transform .15s; }
+    .prod-card:hover { transform:translateY(-4px); box-shadow:0 10px 30px rgba(0,0,0,0.06); }
+    .cart-summary { position:sticky; top:16px; }
+    .pdf-box, .qr-box { border-radius:12px; padding:16px; background:#fff; border:1px solid rgba(0,0,0,0.06); }
+    .small-muted { color:var(--muted); font-size:0.9rem; }
+    footer { text-align:center; color:#666; margin-top:30px; padding-top:18px; border-top:1px solid rgba(0,0,0,0.05); }
+    .btn-tab { border-radius:8px; }
+    .required { color: #c00; }
+    .disabled-link { opacity: 0.5; pointer-events: none; }
   </style>
 </head>
 <body>
@@ -36,18 +41,20 @@
 
   <main class="container py-4">
     <div class="row g-4">
-      <!-- Left: Catalog -->
+      <!-- Products / Catalog -->
       <div class="col-lg-8">
         <div class="d-flex align-items-center mb-3 gap-2 flex-wrap">
           <button class="btn btn-outline-secondary btn-sm btn-tab active" id="catalog-tab">Katalog</button>
           <button class="btn btn-outline-secondary btn-sm btn-tab" id="form-tab">Borang Akaun</button>
-          <a class="btn btn-success btn-sm ms-auto" id="wa-contact" href="#" target="_blank">
+          <a class="btn btn-success btn-sm ms-auto" href="https://wa.me/60128169367" target="_blank">
             <i class="bi bi-whatsapp me-1"></i> Hubungi (WhatsApp)
           </a>
         </div>
 
+        <!-- PRODUCTS GRID -->
         <div id="products-grid" class="row g-3"></div>
 
+        <!-- Gallery -->
         <div class="mt-4">
           <h5 class="mb-2">Contoh Produk</h5>
           <div class="d-flex gap-2">
@@ -57,15 +64,15 @@
           </div>
         </div>
 
-        <!-- Checkout / Payment -->
+        <!-- Payment + Upload + Submit -->
         <div id="checkout-area" class="mt-4">
           <div class="qr-box mb-3">
             <h6>Langkah Pembayaran</h6>
             <p class="small-muted">Sila scan QR DuitNow di bawah atau pindahkan ke akaun Maybank sebagaimana dinyatakan.</p>
             <div class="row">
               <div class="col-md-4 text-center">
-                <img id="qr-img" src="" alt="QR DuitNow" style="max-width:220px; width:100%; border-radius:10px;">
-                <div class="small-muted mt-2">Maybank: <strong>560072624185</strong><br>(Koperasi Pembangunan Usahasama Masyarakat Maju Sabah Berhad)</div>
+                <img id="qr-img" src="https://via.placeholder.com/260x260.png?text=QR+DuitNow" alt="QR DuitNow" style="max-width:220px; width:100%; border-radius:10px;">
+                <div class="small-muted mt-2">Maybank: 560072624185 (Koperasi Pembangunan Usahasama Masyarakat Maju Sabah Berhad)</div>
               </div>
               <div class="col-md-8">
                 <div class="mb-2"><strong>Jumlah perlu dibayar:</strong> <span id="checkout-total" style="font-size:1.25rem; color:var(--pran-red)">RM0.00</span></div>
@@ -79,26 +86,23 @@
                   <label class="form-label">No. Telefon <span class="required">*</span></label>
                   <input id="cust-phone" class="form-control" placeholder="Contoh: 6012xxxxxxx">
                 </div>
-
                 <div class="mb-2">
-                  <label class="form-label">Muat Naik Resit Bayaran (gambar) <small class="text-muted">(required)</small></label>
-                  <input id="receipt-file" type="file" accept="image/*" class="form-control" />
-                  <div class="small-muted mt-1">Max ukuran: 5MB. Hanya imej (jpg/jpeg/png).</div>
+                  <label class="form-label">Muat Naik Resit Bayaran (gambar)</label>
+                  <input id="receipt-file" type="file" accept="image/*" class="form-control">
+                  <div class="small-muted mt-1">Max ukuran: 5MB. Gunakan gambar jelas resit.</div>
                 </div>
 
                 <div class="mt-3">
-                  <button id="proceed-pay" class="btn btn-primary">Proceed to Payment</button>
-                  <button id="submit-order" class="btn btn-success ms-2">Submit Order</button>
+                  <button id="submit-order" class="btn btn-success">Submit Order</button>
                   <span id="submit-status" class="ms-3 small-muted"></span>
                 </div>
               </div>
             </div>
           </div>
         </div>
-
       </div>
 
-      <!-- Right: Cart -->
+      <!-- Cart summary -->
       <div class="col-lg-4">
         <div class="cart-summary p-3 pdf-box">
           <h5>Troli Anda</h5>
@@ -109,7 +113,7 @@
           </div>
 
           <div class="d-grid gap-2">
-            <button id="whatsapp-order" class="btn btn-outline-success">
+            <button id="whatsapp-order" class="btn btn-outline-success disabled-link" disabled>
               <i class="bi bi-whatsapp me-1"></i> Hantar ke WhatsApp
             </button>
             <button id="clear-cart" class="btn btn-outline-secondary">Kosongkan</button>
@@ -131,57 +135,50 @@
     <div>© <span id="year"></span> Kopusamaju Sabah Berhad.</div>
   </footer>
 
-  <!-- CONFIG - ganti dengan nilai anda -->
+  <!-- Config -->
   <script>
-    // -> LETAK proxy endpoint (pastikan ada /submit di hujung)
-    const APPS_PROXY_SUBMIT = "https://pran-proxy.onrender.com/submit"; // <<-- GANTI jika perlu
-    const SECRET_TOKEN = "PRAN-SECURE-9b8e47a2e37b4fd1b32b93dfc5eaa9b7";    // <<-- pastikan sama di Apps Script & proxy
+    const APPS_PROXY_SUBMIT = "https://pran-proxy.onrender.com/submit";
+    const SECRET_TOKEN = "PRAN-SECURE-9b8e47a2e37b4fd1b32b93dfc5eaa9b7";
     const OWNER_WHATSAPP = "60128169367";
-    const QR_IMAGE_URL = "https://via.placeholder.com/260x260.png?text=QR+DuitNow"; // ganti dgn QR sebenar
+    const QR_IMAGE_URL = "https://via.placeholder.com/260x260.png?text=QR+DuitNow";
   </script>
 
-  <!-- SCRIPTS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-    // PRODUCTS DATA
+    // ---------- PRODUCTS ----------
     const PRODUCTS = [
       { id: "jus", name: "Jus Mangga", price: 5.00 },
       { id: "wafer", name: "Wafer Coklat", price: 3.00 },
       { id: "minuman", name: "Minuman Kotak", price: 4.00 },
     ];
-
-    // state
     const cart = {};
+
     function formatRM(n){ return "RM" + n.toFixed(2); }
 
-    // render products
     const grid = document.getElementById("products-grid");
     function renderProducts(){
       grid.innerHTML = "";
       PRODUCTS.forEach(p=>{
-        cart[p.id] = cart[p.id] || 0;
         const col = document.createElement("div");
-        col.className = "col-md-6";
+        col.className = "col-md-6 col-lg-6";
         col.innerHTML = `
           <div class="p-3 prod-card bg-white">
             <div class="d-flex align-items-start gap-3">
               <div style="width:88px;min-width:88px;">
-                <img src="/pran/${p.id === 'jus' ? 'jus.png' : p.id === 'wafer' ? 'wafer.png' : 'minumankotak.png'}" alt="${p.name}" style="width:88px;height:88px;object-fit:cover;border-radius:8px;">
+                <img src="/pran/${p.id}.png" alt="${p.name}" style="width:88px;height:88px;object-fit:cover;border-radius:8px;">
               </div>
               <div class="flex-grow-1">
                 <h6 class="mb-1">${p.name}</h6>
                 <div class="small-muted mb-2">${formatRM(p.price)}</div>
                 <div class="d-flex align-items-center gap-2">
                   <button class="btn btn-sm btn-outline-secondary btn-decrease" data-id="${p.id}">-</button>
-                  <div class="mx-2 qty-display" data-id="${p.id}">${cart[p.id]}</div>
+                  <div class="mx-2 qty-display" data-id="${p.id}">0</div>
                   <button class="btn btn-sm btn-outline-secondary btn-increase" data-id="${p.id}">+</button>
-                  <button class="btn btn-sm btn-link text-danger ms-auto btn-add" data-id="${p.id}">Tambah</button>
                 </div>
               </div>
             </div>
-          </div>
-        `;
+          </div>`;
         grid.appendChild(col);
       });
     }
@@ -204,130 +201,97 @@
       document.getElementById("checkout-total").textContent = formatRM(total);
     }
 
-    // product buttons
-    document.addEventListener("click", (e)=>{
+    document.addEventListener("click",(e)=>{
       const inc = e.target.closest(".btn-increase");
       const dec = e.target.closest(".btn-decrease");
-      const add = e.target.closest(".btn-add");
       if(inc){ const id=inc.dataset.id; cart[id]=(cart[id]||0)+1; updateCartUI(); }
       if(dec){ const id=dec.dataset.id; cart[id]=Math.max(0,(cart[id]||0)-1); updateCartUI(); }
-      if(add){ const id=add.dataset.id; cart[id]=(cart[id]||0)+1; updateCartUI(); }
     });
 
-    document.getElementById("clear-cart").addEventListener("click", ()=>{ PRODUCTS.forEach(p=>cart[p.id]=0); updateCartUI(); });
+    document.getElementById("clear-cart").addEventListener("click",()=>{ PRODUCTS.forEach(p=>cart[p.id]=0); updateCartUI(); });
 
-    // WhatsApp order button - open wa.me with message (no server)
-    document.getElementById("whatsapp-order").addEventListener("click", ()=>{
-      const name = document.getElementById("cust-name").value || "—";
-      const phone = document.getElementById("cust-phone").value || "—";
-      let total = 0;
-      let lines = PRODUCTS.map(p=>{
-        const q = cart[p.id] || 0;
-        if(q>0){ total += p.price * q; return `- ${p.name} x${q} = RM${(p.price*q).toFixed(2)}`; }
-        return null;
-      }).filter(Boolean);
-      if(lines.length===0){ alert("Sila pilih sekurang-kurangnya 1 item."); return; }
-      const msg = `Pesanan baru\n${lines.join("\n")}\nTotal: RM${total.toFixed(2)}\n\nPelanggan: ${name}\nPhone: ${phone}`;
-      const url = `https://wa.me/${OWNER_WHATSAPP}?text=${encodeURIComponent(msg)}`;
-      window.open(url, "_blank");
-    });
+    // ----------- Submit Order (final version) -----------
+    const submitBtn = document.getElementById("submit-order");
+    const whatsappBtn = document.getElementById("whatsapp-order");
+    const statusEl = document.getElementById("submit-status");
 
-    // INIT UI
-    renderProducts();
-    updateCartUI();
-    document.getElementById("year").textContent = new Date().getFullYear();
-    if(QR_IMAGE_URL) document.getElementById("qr-img").src = QR_IMAGE_URL;
-    document.getElementById("wa-contact").href = `https://wa.me/${OWNER_WHATSAPP}`;
+    function disableWhatsApp(disabled){
+      whatsappBtn.disabled = disabled;
+      whatsappBtn.classList.toggle("disabled-link", disabled);
+    }
+    disableWhatsApp(true);
 
-    // proceed-pay just scrolls
-    document.getElementById("proceed-pay").addEventListener("click", ()=>{ document.getElementById("receipt-file").scrollIntoView({behavior:'smooth', block:'center'}); });
+    submitBtn.addEventListener("click", async ()=>{
+      const name=document.getElementById("cust-name").value.trim();
+      const phone=document.getElementById("cust-phone").value.trim();
+      const file=document.getElementById("receipt-file").files[0];
+      const lines=PRODUCTS.map(p=>({p,q:cart[p.id]||0})).filter(x=>x.q>0);
+      if(lines.length===0) return alert("Sila pilih item terlebih dahulu.");
+      if(!name||!phone) return alert("Sila isi nama & nombor telefon.");
+      if(!file) return alert("Sila muat naik gambar resit (wajib).");
+      const allowed=["image/jpeg","image/png","image/jpg"];
+      if(!allowed.includes(file.type)) return alert("Hanya imej JPG/PNG dibenarkan.");
+      if(file.size>5*1024*1024) return alert("Fail terlalu besar (max 5MB).");
 
-    // submit-order: convert file -> base64, POST to proxy
-    document.getElementById("submit-order").addEventListener("click", async ()=>{
-      const submitStatus = document.getElementById("submit-status");
-      submitStatus.textContent = "";
-      const name = (document.getElementById("cust-name").value||"").trim();
-      const phone = (document.getElementById("cust-phone").value||"").trim();
-      const fileInput = document.getElementById("receipt-file");
-      const file = fileInput.files[0] || null;
+      statusEl.textContent="Menghantar...";
+      disableWhatsApp(true);
 
-      // validation
-      const lines = PRODUCTS.map(p=>({p, q: cart[p.id]||0})).filter(x=>x.q>0);
-      if(lines.length===0){ alert("Sila pilih item terlebih dahulu."); return; }
-      if(!name || !phone){ alert("Sila isi nama & nombor telefon."); return; }
-      if(!file){ alert("Sila muat naik gambar resit (required)."); return; }
-      // file type check
-      const allowed = ["image/jpeg","image/png","image/jpg"];
-      if(!allowed.includes(file.type)){
-        alert("Jenis fail tidak dibenarkan. Hanya imej (jpg/jpeg/png) dibenarkan.");
-        return;
-      }
-      if(file.size > 5 * 1024 * 1024){ alert("Saiz resit terlalu besar (max 5MB)."); return; }
+      const items=lines.map(l=>({id:l.p.id,name:l.p.name,qty:l.q,price:l.p.price,subtotal:+(l.p.price*l.q).toFixed(2)}));
+      const total=+(items.reduce((s,i)=>s+i.subtotal,0)).toFixed(2);
+      const receiptBase64=await fileToBase64(file);
 
-      submitStatus.textContent = "Menghantar...";
-
-      // prepare payload
-      const items = lines.map(l=>({ id: l.p.id, name: l.p.name, qty: l.q, price: l.p.price, subtotal: +(l.p.price*l.q).toFixed(2) }));
-      const total = +(items.reduce((s,i)=>s+i.subtotal,0)).toFixed(2);
-
-      // read file as base64
-      let receiptBase64 = "";
-      try {
-        receiptBase64 = await fileToBase64(file); // data:*;base64,...
-      } catch(e){
-        alert("Gagal membaca fail resit.");
-        submitStatus.textContent = "";
-        return;
-      }
-
-      const payload = {
-        secret: SECRET_TOKEN,
-        timestamp: new Date().toISOString(),
-        customer: { name, phone },
-        items,
-        total,
-        receiptName: file.name,
-        receiptBase64
-      };
+      const payload={secret:SECRET_TOKEN,timestamp:new Date().toISOString(),customer:{name,phone},items,total,receiptName:file.name,receiptBase64};
 
       try{
-        const res = await fetch(APPS_PROXY_SUBMIT, {
-          method: "POST",
-          headers: { "Content-Type":"application/json" },
-          body: JSON.stringify(payload),
-          credentials: "omit"
-        });
-        // network-level errors cause catch
-        const data = await res.json();
-        if(!res.ok || data.status !== "success"){
-          throw new Error(data && data.message ? data.message : ("Server error: " + res.status));
+        const res=await fetch(APPS_PROXY_SUBMIT,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(payload)});
+        const data=await res.json();
+        if(data&&data.status==="success"){
+          statusEl.textContent="✅ Berjaya dihantar. Ref: "+(data.ref||"—");
+          const waText=`Pesanan baru (Ref: ${data.ref||''})\n`+
+            items.map(i=>`${i.name} x${i.qty} = RM${i.subtotal.toFixed(2)}`).join("\n")+
+            `\nTotal: RM${total.toFixed(2)}\n\nPelanggan: ${name}\nPhone: ${phone}\n\nSila semak transaksi resit.`;
+          window.open(`https://wa.me/${OWNER_WHATSAPP}?text=${encodeURIComponent(waText)}`,"_blank");
+
+          setTimeout(()=>{
+            PRODUCTS.forEach(p=>cart[p.id]=0);
+            updateCartUI();
+            document.getElementById("cust-name").value="";
+            document.getElementById("cust-phone").value="";
+            document.getElementById("receipt-file").value="";
+            disableWhatsApp(true);
+          },1000);
+        }else{
+          throw new Error(data.message||"Server Error");
         }
-
-        submitStatus.textContent = "Berjaya dihantar. Ref: " + (data.ref||"—");
-        // auto-send WA notification to owner
-        const waText = `Pesanan baru:\n${items.map(i=>`${i.name} x${i.qty} = RM${i.subtotal.toFixed(2)}`).join("\n")}\nTotal: RM${total.toFixed(2)}\nPelanggan: ${name}\nPhone: ${phone}\nRef: ${data.ref||''}`;
-        // open whatsapp in new tab
-        window.open(`https://wa.me/${OWNER_WHATSAPP}?text=${encodeURIComponent(waText)}`, "_blank");
-
-        // reset cart + UI
-        PRODUCTS.forEach(p=>cart[p.id]=0);
-        updateCartUI();
-        fileInput.value = "";
       }catch(err){
         console.error(err);
-        alert("❌ Ralat: " + (err.message || err));
-        submitStatus.textContent = "";
+        alert("❌ Ralat: "+(err.message||err));
+        statusEl.textContent="";
+        disableWhatsApp(false);
       }
+    });
+
+    ["cust-name","cust-phone","receipt-file"].forEach(id=>{
+      document.getElementById(id).addEventListener("input",()=>{
+        const name=document.getElementById("cust-name").value.trim();
+        const phone=document.getElementById("cust-phone").value.trim();
+        const file=document.getElementById("receipt-file").files[0];
+        disableWhatsApp(!(name&&phone&&file));
+      });
     });
 
     function fileToBase64(file){
-      return new Promise((resolve, reject)=>{
-        const r = new FileReader();
-        r.onload = ()=> resolve(r.result);
-        r.onerror = ()=> reject("Fail read error");
+      return new Promise((res,rej)=>{
+        const r=new FileReader();
+        r.onload=()=>res(r.result);
+        r.onerror=()=>rej("Fail read error");
         r.readAsDataURL(file);
       });
     }
+
+    renderProducts(); PRODUCTS.forEach(p=>cart[p.id]=0); updateCartUI();
+    document.getElementById("year").textContent=new Date().getFullYear();
+    document.getElementById("qr-img").src=QR_IMAGE_URL;
   </script>
 </body>
 </html>
