--- a/order.html
+++ b/order.html
@@ -59,6 +59,7 @@
               <i class="bi bi-whatsapp me-1"></i> Hantar ke WhatsApp
             </button>
             <span id="submit-status" class="ms-2 small text-muted align-self-center"></span>
+            <small class="small-muted">Selepas submit berjaya: sistem akan simpan ke Database. Kemudian boleh tekan butang WhatsApp untuk hantarkan ringkasan pesanan kepada admin.</small>
           </div>
         </div>
       </div>
