--- a/order.html
+++ b/order.html
@@ -16,6 +16,8 @@
     .qr-box { border:1px solid #eee; border-radius:12px; padding:16px; background:#fff; }
     .disabled-link { opacity:0.6; pointer-events:none; }
     .required { color:#c00; }
+    .error-msg { color:#c00; font-size:0.85em; display:none; }
+    input.is-invalid { border-color:#c00; background:#ffeaea; }
     footer { text-align:center; color:#777; padding-top:1rem; border-top:1px solid #eee; margin-top:3rem; }
   </style>
 </head>
@@ -41,14 +43,17 @@
           <div class="mt-3">
             <label class="form-label">Nama <span class="required">*</span></label>
             <input id="cust-name" class="form-control" placeholder="Nama penuh">
+            <div class="error-msg" id="err-name">Sila isi nama penuh.</div>
           </div>
           <div class="mt-2">
             <label class="form-label">No. Telefon <span class="required">*</span></label>
-            <input id="cust-phone" class="form-control" placeholder="6012xxxxxxx">
+            <input id="cust-phone" class="form-control" placeholder="6012xxxxxxx" maxlength="15">
+            <div class="error-msg" id="err-phone">Sila isi nombor telefon yang sah (contoh: 60123456789).</div>
           </div>
           <div class="mt-2">
             <label class="form-label">Muat Naik Resit (gambar) <span class="required">*</span></label>
             <input id="receipt-file" type="file" accept="image/*" class="form-control">
+            <div class="error-msg" id="err-file">Sila muat naik resit dalam format gambar (maks 5MB).</div>
           </div>
 
           <div class="mt-4 d-flex gap-2 flex-wrap">
@@ -59,8 +64,10 @@
               <i class="bi bi-whatsapp me-1"></i> Hantar ke WhatsApp
             </button>
             <span id="submit-status" class="ms-2 small text-muted align-self-center"></span>
-            <small class="small-muted">Selepas submit berjaya: sistem akan simpan ke Database. Kemudian boleh tekan butang WhatsApp untuk hantarkan ringkasan pesanan kepada admin.</small>
           </div>
+          <small class="text-muted d-block mt-2">
+            Selepas submit berjaya: sistem akan simpan ke Database. Kemudian boleh tekan butang WhatsApp untuk hantarkan ringkasan pesanan kepada admin.
+          </small>
         </div>
       </div>
 
@@ -109,8 +116,7 @@
     PRODUCTS.forEach(p=>{
       const col=document.createElement("div");
       col.className="col-md-6";
-      col.innerHTML=`
-        <div class="p-3 prod-card border d-flex align-items-center">
+      col.innerHTML=`<div class="p-3 prod-card border d-flex align-items-center">
           <img src="${p.img}" alt="${p.name}" class="prod-img">
           <div class="flex-grow-1">
             <div class="fw-bold">${p.name}</div>
@@ -127,9 +133,11 @@
 
     document.addEventListener("click",(e)=>{
       if(e.target.classList.contains("plus")){
-        const id=e.target.dataset.id;cart[id]=(cart[id]||0)+1;document.getElementById(`qty-${id}`).textContent=cart[id];updateCartUI();
+        const id=e.target.dataset.id;cart[id]=(cart[id]||0)+1;
+        document.getElementById(`qty-${id}`).textContent=cart[id];updateCartUI();
       }else if(e.target.classList.contains("minus")){
-        const id=e.target.dataset.id;cart[id]=Math.max(0,(cart[id]||0)-1);document.getElementById(`qty-${id}`).textContent=cart[id];updateCartUI();
+        const id=e.target.dataset.id;cart[id]=Math.max(0,(cart[id]||0)-1);
+        document.getElementById(`qty-${id}`).textContent=cart[id];updateCartUI();
       }
     });
 
@@ -140,6 +148,18 @@
     const whatsappBtn=document.getElementById("whatsapp-order");
     const statusEl=document.getElementById("submit-status");
 
+    function showError(id,msg){
+      const el=document.getElementById(id);
+      el.previousElementSibling.classList.add("is-invalid");
+      el.style.display="block";
+      el.textContent=msg;
+    }
+
+    function clearErrors(){
+      document.querySelectorAll(".error-msg").forEach(e=>e.style.display="none");
+      document.querySelectorAll(".is-invalid").forEach(e=>e.classList.remove("is-invalid"));
+    }
+
     function disableWhatsApp(disabled){
       whatsappBtn.disabled=disabled;
       whatsappBtn.classList.toggle("disabled-link",disabled);
@@ -149,19 +169,27 @@
     let lastSubmittedData=null;
 
     submitBtn.onclick=async ()=>{
-      const name=document.getElementById("cust-name").value.trim();
-      const phone=document.getElementById("cust-phone").value.trim();
+      clearErrors();
+      const name=document.getElementById("cust-name");
+      const phone=document.getElementById("cust-phone");
       const file=document.getElementById("receipt-file").files[0];
       const selected=PRODUCTS.map(p=>({p,qty:cart[p.id]||0})).filter(x=>x.qty>0);
-      if(selected.length===0) return alert("Sila pilih produk dahulu.");
-      if(!name||!phone||!file) return alert("Sila isi semua maklumat wajib.");
-      if(!file.type.startsWith("image/")) return alert("Fail mesti gambar (image only).");
-      if(file.size > 5*1024*1024) return alert("Saiz gambar melebihi 5MB.");
+
+      if(selected.length===0) return alert("Sila pilih sekurang-kurangnya satu produk.");
+
+      let valid=true;
+      if(!name.value.trim()){showError("err-name","Sila isi nama penuh.");valid=false;}
+      if(!/^601\d{7,9}$/.test(phone.value.trim())){showError("err-phone","Format nombor telefon tidak sah (contoh: 60123456789).");valid=false;}
+      if(!file){showError("err-file","Sila muat naik resit pembayaran.");valid=false;}
+      else if(!file.type.startsWith("image/")){showError("err-file","Fail mesti gambar (jpg/png/webp).");valid=false;}
+      else if(file.size>5*1024*1024){showError("err-file","Gambar melebihi 5MB.");valid=false;}
+
+      if(!valid)return;
 
       const base64=await fileToBase64(file);
       const items=selected.map(x=>({id:x.p.id,name:x.p.name,qty:x.qty,price:x.p.price,subtotal:x.p.price*x.qty}));
       const total=items.reduce((a,b)=>a+b.subtotal,0);
-      const payload={secret:SECRET_TOKEN,timestamp:new Date().toISOString(),customer:{name,phone},items,total,receiptName:file.name,receiptBase64:base64};
+      const payload={secret:SECRET_TOKEN,timestamp:new Date().toISOString(),customer:{name:name.value.trim(),phone:phone.value.trim()},items,total,receiptName:file.name,receiptBase64:base64};
 
       statusEl.textContent="Menghantar...";
       try{
@@ -170,12 +198,11 @@
         if(data.status==="success"){
           statusEl.textContent="✅ Berjaya hantar ("+(data.ref||"Ref")+")";
           disableWhatsApp(false);
-          lastSubmittedData={items,total,name,phone,ref:data.ref};
+          lastSubmittedData={items,total,name:name.value.trim(),phone:phone.value.trim(),ref:data.ref};
         }else throw new Error(data.message||"Server error");
       }catch(err){
         console.error(err);
-        alert("❌ Gagal menghantar ke server: "+err.message);
-        statusEl.textContent="";
+        statusEl.textContent="❌ Ralat semasa menghantar.";
       }
     };
 
