--- a/order.html
+++ b/order.html
@@ -36,7 +36,7 @@
           <h5 class="mb-3">Langkah Pembayaran</h5>
           <p>Sila scan QR DuitNow atau pindahkan ke akaun:</p>
           <p><strong>Maybank: 560072624185</strong><br>Koperasi Pembangunan Usahasama Masyarakat Maju Sabah Berhad</p>
-          <img id="qr-img" src="https://via.placeholder.com/260x260.png?text=QR+DuitNow" class="mb-3" width="200" alt="QR DuitNow">
+          <img id="qr-img" src="https://kienon.github.io/pran/qrcontoh.jpg" class="mb-3" width="200" alt="QR DuitNow">
 
           <div><strong>Jumlah perlu dibayar:</strong> <span id="checkout-total" class="text-danger fw-bold">RM0.00</span></div>
 
