Update birthday message text

--- a/foryou.html
+++ b/foryou.html
@@ -63,7 +63,7 @@
 
 <script>
 // ===== Birthday typing message =====
-const birthdayMessage = "Happy Birthday Aiwa Jailin! 🎉💙\nSemoga hubungan kita makin erat, ke arah yang lebih baik, till Jannah. Semoga Allah sentiasa merahmati dan melindungi awak 💕";
+const birthdayMessage = "Happy Birthday! 🎉💙\nSemoga hubungan kita makin erat, ke arah yang lebih baik, till Jannah. Semoga Allah sentiasa merahmati dan melindungi awak 💕";
 const messageEl = document.getElementById("message");
 let msgIndex = 0;
 
